frontend-service/src/style.scss
@import './colors.scss';
@import './layout.scss';

a {
  color: $primary;
  text-decoration: none;

  &:hover {
    color: $black;
  }
}

.button {
  display: flex;
  background-color: $primary;
  color: $white;
  font-weight: bold;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  transition: 
    color 0.15s ease-in-out,
    background-color 0.15s ease-in-out, 
    border-color 0.15s ease-in-out, 
    box-shadow 0.15s ease-in-out;

  &:focus {
    outline: 0;
    box-shadow: 0 0 0 0.2rem transparentize($primary, .5);
  }

  &:hover {
    background-color: $darkgrey;
  }
}

.button-danger {
  @extend .button;
  border-radius: 0.05rem;
  background-color: $white;
  color: $danger;
  border: 1px solid $danger;

  &:hover {
    background-color: $black;
    color: $white;
    border: 1px solid transparent;
  }

  &:focus {
    box-shadow: 0 0 0 0.2rem transparentize($danger, .5);
  }
}

.button-delete {
  @extend .button-danger;

  & svg {
    display: block;
    margin: auto;
    background-color: transparent;
    fill: $danger;
    width: 20px;
    height: 20px;
    margin-right: 10px;
  }
}

.form-input {
  display: block;
  width: 100%;
  height: calc(1.5em + 0.75rem + 2px);
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: $black;
  background-color: white;
  background-clip: padding-box;
  border: 1px solid $lighter;
  border-radius: 0.25rem;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;

  &.is-valid {
    border-color: $success;
    &:focus {
      box-shadow: 0 0 0 0.2rem transparentize($success, 0.6)!important;
    }
  }
}

.form-input.is-valid ~ .valid-feedback {
  display: block;
}

.form-input.is-invalid ~ .invalid-feedback {
  display: block;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: .875rem;
}

#root {
  position: relative;
  min-height: 100vh;
}

.navbar-main {
  padding: 7px;
  font-size: 1rem;
}

%navbar-pushed {
  padding-top: 112px;

  @media only screen and (min-width : $break-small) {
    padding-top: 64px;
  }
}

%padding-to-footer {
  padding-bottom: $footer-height + 40px;
}

.between {
  @extend %navbar-pushed;
  @extend %padding-to-footer;
}

.sighting-stats {
  margin-bottom: 10px;
  display: flex;
  align-items: stretch;
  justify-content: evenly;
}

.stat-card {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
}

.stat-card .stat {
  font-size: xx-large;
  color: $primary;
}

input:focus {
  border-color: $light-primary;
  box-shadow: 0 0 0 0.2rem rgba(238, 99, 82, 0.25);
  outline-color: transparent;
  outline-width: 0;
}

#navbarLogo {
  display: inline;
}

#navbarLogoImage {
  width: 50px;
}

.navbar .form-control {
  padding: .75rem 1rem;
  border-radius: 0;
}

.navbar-brand {
  padding-top: 0px;
  padding-bottom: 0px;
}

.form-control-dark:focus {
  border-color: transparent;
  box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
}

.sidebar {
  position: sticky;
  top: 64px;
}

.sidebar .nav-link {
  font-weight: 500;
}

/*
 * Content
 */

.picture-cover-container {
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50% 35%;
}

.picture-cover {
  height: 150px;
}

.bird-page-name {
  font-size: 25px;
  z-index: 1;
}

/* => md */
@media (min-width: 768px) {
  .bird-page-name {
    font-size: 35px;
  }
}

.card-bird-thumbnail {
  object-fit: cover;
  object-position: 0% 15%;
  width: 100%;
  max-height: 100px;
}

@media (min-width: 576px) {
  .card-bird-thumbnail {
    max-height: 150px;
    height: 100%;
    object-position: 50%;
  }

  #card-bird-thumbnail-col {
    max-width: 150px;
    height: 150px;
  }
}

.card-horizontal {
  display: flex;
  flex: 1 1 auto;
}

/* => md */
@media (min-width: 768px) {
  #registerRequestFormContainer {
    width: 520px;
  }
}

.main-grid {
  background-color: white;
  height: auto;
  display: grid;
  grid: 1fr / 1fr;
  grid-template-areas:
    'main'
}

.sidemenu {
  display: none;
}

main {
  padding: 0 10px;
}

@media only screen and (min-width : 768px) {
  .main-grid {
    grid: auto / 3fr 7fr;
    grid-template-areas:
      'side main';
  }

  .sidemenu {
    display: block;
  }
}

@media only screen and (min-width : 1224px) {
  .main-grid {
    grid: auto / 1fr 750px 1fr;
  }
}

.sidebar {
  padding-top: 15px;
}

main {
  padding-top: 15px;
}

